--- a/cafe.html
+++ b/cafe.html
@@ -12582,7 +12582,7 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210902121100067" creator="zeid" modified="20210902121344633" modifier="zeid" tags="[[ПАК «Звезда» Примеры вызовов функций криптосервиса]]" title="App Service API: Send Data &amp;&amp; Receive Msg">
+<div created="20210902121100067" creator="zeid" modified="20210902121426835" modifier="zeid" tags="Криптосервис info" title="App Service API: Send Data &amp;&amp; Receive Msg">
 <pre>!! App Service API: Send Data
 
 Отправка сообщения без подтверждения от сервера приложений клиенту.
