Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12115,8 +12115,8 @@ Error message and password prompt
 <div created="20210603094526061" modified="20210603094526061" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/xmldom">
 <pre>yes</pre>
 </div>
-<div created="20210607101316972" modified="20210831115809503" title="$:/state/search-list/selected-item--874113614">
-<pre>Php socket client-secondaryList</pre>
+<div created="20210607101316972" creator="zeid" modified="20210902121614300" modifier="zeid" title="$:/state/search-list/selected-item--874113614">
+<pre>Пак Звезда-primaryList</pre>
 </div>
 <div created="20210601144924436" modified="20210601144924436" title="$:/state/showeditpreview">
 <pre>yes</pre>
@@ -12145,16 +12145,16 @@ Error message and password prompt
 <div created="20210603083336622" modified="20210603083336622" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20210601142236932" creator="zeid" modified="20210902121333027" modifier="zeid" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20210601142236932" creator="zeid" modified="20210902121543202" modifier="zeid" title="$:/state/tab/sidebar--595412856">
+<pre>CoffeeTabs</pre>
 </div>
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831180714702" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>projects</pre>
+<div created="20210826160606675" creator="zeid" modified="20210902121732526" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>code</pre>
 </div>
-<div created="20210826160602899" creator="zeid" modified="20210831180717889" modifier="zeid" title="$:/state/tab2--2135597508">
+<div created="20210826160602899" creator="zeid" modified="20210902121608665" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
@@ -12355,7 +12355,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[ПАК «Звезда» Примеры вызовов функций криптосервиса]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home [[Криптосервис - информация]]" modified="20210902121232167" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[ПАК «Звезда» Примеры вызовов функций криптосервиса]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home [[Криптосервис - информация]]" modified="20210902121739853" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14062,8 +14062,24 @@ ClientID:     &lt;D&gt; (идентификатор клиента)
 
 {{App Service API: Send Data &amp;&amp; Receive Msg}}</pre>
 </div>
-<div created="20210826160041292" modified="20210826160908540" tags="projects" title="Пак Звезда">
-<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+<div created="20210826160041292" creator="zeid" modified="20210902121802191" modifier="zeid" tags="projects" title="Пак Звезда">
+<pre>`info`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[info]sort[title]]&quot;&gt;&gt;
+
+
+`задачи`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[задачи]sort[title]]&quot;&gt;&gt;
+
+`php`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[php]sort[title]]&quot;&gt;&gt;
+
+
+---
+
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'Пак Звезда'&gt;&gt;
 
