--- a/cafe.html
+++ b/cafe.html
@@ -541,8 +541,6 @@ Error message and password prompt
 
 <li>Криптосервис - задачи</li>
 
-<li>Криптосервис - информация</li>
-
 <li>Облако тегов - 1</li>
 
 <li>Отображать тип проекта (LHD-RV) при генерации</li>
@@ -12355,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[ПАК «Звезда» Примеры вызовов функций криптосервиса]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home [[Криптосервис - информация]]" modified="20210902121739853" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[ПАК «Звезда» Примеры вызовов функций криптосервиса]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home" modified="20210902121841105" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13934,15 +13932,6 @@ var_dump($x);*/
 #	RadioFeedback.SendMsg
 
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
-</pre>
-</div>
-<div created="20210831145156074" creator="zeid" modified="20210831180742043" modifier="zeid" tags="Криптосервис info" title="Криптосервис - информация">
-<pre>Коммуникационный пакет для исходящего сообщения имеет вид:
-
-```css
-PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : tuple]
-
-```
 </pre>
 </div>
 <div created="20210603152704922" modified="20210603154359612" tags="" title="Облако тегов - 1">
