--- a/cafe.html
+++ b/cafe.html
@@ -12149,8 +12149,8 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210902121732526" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>code</pre>
+<div created="20210826160606675" creator="zeid" modified="20210902121919378" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>projects</pre>
 </div>
 <div created="20210826160602899" creator="zeid" modified="20210902121608665" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[ПАК «Звезда» Примеры вызовов функций криптосервиса]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home" modified="20210902121841105" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home" modified="20210902121947561" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12580,7 +12580,7 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210902121100067" creator="zeid" modified="20210902121426835" modifier="zeid" tags="Криптосервис info" title="App Service API: Send Data &amp;&amp; Receive Msg">
+<div created="20210902121100067" creator="zeid" modified="20210902122012070" modifier="zeid" tags="Криптосервис api" title="App Service API: Send Data &amp;&amp; Receive Msg">
 <pre>!! App Service API: Send Data
 
 Отправка сообщения без подтверждения от сервера приложений клиенту.
