--- a/cafe.html
+++ b/cafe.html
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[App Service API: Send Data &amp;&amp; Receive Msg]] Home" modified="20210902121947561" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="app_feedback.zdl [[Пак Звезда]] Home" modified="20210902122018700" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12654,7 +12654,7 @@ Type:      1 (Function Call)
 
 </pre>
 </div>
-<div created="20210831145632192" creator="zeid" modified="20210831145651750" modifier="zeid" tags="zdl" title="app_feedback.zdl">
+<div created="20210831145632192" creator="zeid" modified="20210902122026055" modifier="zeid" tags="zdl Криптосервис" title="app_feedback.zdl">
 <pre>```properties
 # API, которое должно предоставляться криптосервису для отправки данных приложению. Через данное API расшифрованные данные передаются приложению.
 # Провайдером данного API является подсистема, которая обеспечивает взаимодействие криптосервиса с сервером прилоожения.
