--- a/cafe.html
+++ b/cafe.html
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="app_feedback.zdl [[Пак Звезда]] Home" modified="20210902122018700" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="radio_service.zdl $:/Import app_service.zdl [[Пак Звезда]] Home" modified="20210902122036427" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13253,7 +13253,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 ```
 </pre>
 </div>
-<div created="20210901120834981" creator="zeid" modified="20210901120911228" modifier="zeid" tags="zdl" title="radio_service.zdl">
+<div created="20210901120834981" creator="zeid" modified="20210902122048178" modifier="zeid" tags="zdl Криптосервис" title="radio_service.zdl">
 <pre>
 ```properties
 # API которое предоставляет криптосервис для получения сообщений от клиентов.
