--- a/cafe.html
+++ b/cafe.html
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="radio_service.zdl $:/Import app_service.zdl [[Пак Звезда]] Home" modified="20210902122036427" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="app_service.zdl [[Пак Звезда]] Home" modified="20210902122036427" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12703,7 +12703,7 @@ End
 ```
 </pre>
 </div>
-<div created="20210831144146479" creator="zeid" modified="20210831145432121" modifier="zeid" tags="zdl" title="app_service.zdl">
+<div created="20210831144146479" creator="zeid" modified="20210902122104479" modifier="zeid" tags="zdl Криптосервис" title="app_service.zdl">
 <pre>```properties
 # API которое предоставляет криптосервис для приложения. Через данное API приложение обращается к клиентам.
 # Пользователем данного API является подсистема, обеспечивающая взаимодействие с приложением 
