--- a/cafe.html
+++ b/cafe.html
@@ -12113,8 +12113,8 @@ Error message and password prompt
 <div created="20210603094526061" modified="20210603094526061" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/xmldom">
 <pre>yes</pre>
 </div>
-<div created="20210607101316972" creator="zeid" modified="20210902121614300" modifier="zeid" title="$:/state/search-list/selected-item--874113614">
-<pre>Пак Звезда-primaryList</pre>
+<div created="20210607101316972" creator="zeid" modified="20210902122109735" modifier="zeid" title="$:/state/search-list/selected-item--874113614">
+<pre>Криптосервис - api-primaryList</pre>
 </div>
 <div created="20210601144924436" modified="20210601144924436" title="$:/state/showeditpreview">
 <pre>yes</pre>
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="app_service.zdl [[Пак Звезда]] Home" modified="20210902122036427" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Криптосервис - api]] AppFeedback app_service.zdl [[Пак Звезда]] Home" modified="20210902122111485" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12823,7 +12823,7 @@ End
 ```
 </pre>
 </div>
-<div created="20210831145657855" creator="zeid" modified="20210901061935831" modifier="zeid" tags="[[Криптосервис - api]]" title="AppFeedback">
+<div created="20210831145657855" creator="zeid" modified="20210902122121509" modifier="zeid" tags="Криптосервис api" title="AppFeedback">
 <pre>Из app_feedback.h:
 
 ```h
