--- a/cafe.html
+++ b/cafe.html
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Криптосервис - api]] AppFeedback app_service.zdl [[Пак Звезда]] Home" modified="20210902122111485" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Криптосервис - api]] AppService [[Пак Звезда]] Home" modified="20210902122138041" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12838,7 +12838,7 @@ enum class Functions {
 
 {{app_feedback.zdl}}</pre>
 </div>
-<div created="20210831143313296" creator="zeid" modified="20210831144251209" modifier="zeid" tags="[[Криптосервис - api]]" title="AppService">
+<div created="20210831143313296" creator="zeid" modified="20210902122147984" modifier="zeid" tags="Криптосервис api" title="AppService">
 <pre>Из app_service.h
 
 ```cpp
