--- a/cafe.html
+++ b/cafe.html
@@ -533,8 +533,6 @@ Error message and password prompt
 
 <li>Криптосервис</li>
 
-<li>Криптосервис - api</li>
-
 <li>Криптосервис - handshake &amp; login</li>
 
 <li>Криптосервис - php пример</li>
@@ -12353,7 +12351,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Криптосервис - api]] AppService [[Пак Звезда]] Home" modified="20210902122138041" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] Home" modified="20210902122138041" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13504,13 +13502,6 @@ jcr2297215</pre>
 
 
 </pre>
-</div>
-<div created="20210831143909705" creator="zeid" modified="20210901061923874" modifier="zeid" tags="Криптосервис" title="Криптосервис - api">
-<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
-
-&lt;&lt;toc-selective-expandable 'Криптосервис - api'&gt;&gt;
-
-&lt;/div&gt;</pre>
 </div>
 <div created="20210831130316573" modified="20210831130724005" tags="php handshake Криптосервис" title="Криптосервис - handshake &amp; login">
 <pre>```php
