--- a/cafe.html
+++ b/cafe.html
@@ -14042,7 +14042,7 @@ ClientID:     &lt;D&gt; (идентификатор клиента)
 
 {{App Service API: Send Data &amp;&amp; Receive Msg}}</pre>
 </div>
-<div created="20210826160041292" creator="zeid" modified="20210902121910638" modifier="zeid" tags="projects" title="Пак Звезда">
+<div created="20210826160041292" creator="zeid" modified="20210902122225171" modifier="zeid" tags="projects" title="Пак Звезда">
 <pre>Коммуникационный пакет для исходящего сообщения имеет вид:
 
 ```css
@@ -14060,10 +14060,17 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 
 &lt;&lt;list-links &quot;[tag[Криптосервис]tag[задачи]sort[title]]&quot;&gt;&gt;
 
+`api`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[api]sort[title]]&quot;&gt;&gt;
+
 `php`:
 
 &lt;&lt;list-links &quot;[tag[Криптосервис]tag[php]sort[title]]&quot;&gt;&gt;
 
+`zdl`:
+
+&lt;&lt;list-links &quot;[tag[Криптосервис]tag[zdl]sort[title]]&quot;&gt;&gt;
 
 ---
 
