--- a/cafe.html
+++ b/cafe.html
@@ -12351,7 +12351,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] Home" modified="20210902122138041" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[Криптосервис - задачи]] Home" modified="20210902122243362" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14042,13 +14042,22 @@ ClientID:     &lt;D&gt; (идентификатор клиента)
 
 {{App Service API: Send Data &amp;&amp; Receive Msg}}</pre>
 </div>
-<div created="20210826160041292" creator="zeid" modified="20210902122225171" modifier="zeid" tags="projects" title="Пак Звезда">
+<div created="20210826160041292" creator="zeid" modified="20210902122503053" modifier="zeid" tags="projects" title="Пак Звезда">
 <pre>Коммуникационный пакет для исходящего сообщения имеет вид:
 
 ```css
 PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : tuple]
 
 ```
+
+Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
+
+Идентификаторы функций – это порядковый номер функций, начиная сверху. 
+
+Документы `doc/utils/rpc`: 
+
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
 
 
 `info`:
