Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13899,23 +13899,8 @@ var_dump($x);*/
 ```
 </pre>
 </div>
-<div created="20210831115833307" creator="zeid" modified="20210831145616362" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
-<pre>Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
-Там есть: 
-
-* [[app_service.zdl]]
-* [[app_feedback.zdl]]
-* [[radio_service.zdl]]
-* [[radio_feedback.zdl]]
-
-Идентификаторы функций – это порядковый номер функций, начиная сверху. 
-
-Документы `doc/utils/rpc`: 
-
-* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
-* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
-
-Основные функции:
+<div created="20210831115833307" creator="zeid" modified="20210902122519759" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<pre>Основные функции:
 
 #	AppService.SendData
 #	AppFeedback.ReceiveData
