--- a/cafe.html
+++ b/cafe.html
@@ -12351,7 +12351,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Пак Звезда]] [[Криптосервис - задачи]] Home" modified="20210902122243362" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="RadioService [[Пак Звезда]] radio_service.zdl Home" modified="20210902122554074" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13294,7 +13294,7 @@ End
 ```
 </pre>
 </div>
-<div created="20210901120930074" creator="zeid" modified="20210901121012584" modifier="zeid" title="RadioService">
+<div created="20210901120930074" creator="zeid" modified="20210902122602265" modifier="zeid" tags="Криптосервис api" title="RadioService">
 <pre>Из radio_service.h:
 
 ```h
