--- a/cafe.html
+++ b/cafe.html
@@ -539,6 +539,8 @@ Error message and password prompt
 
 <li>Криптосервис - задачи</li>
 
+<li>Криптосервис - Саша</li>
+
 <li>Облако тегов - 1</li>
 
 <li>Отображать тип проекта (LHD-RV) при генерации</li>
@@ -12351,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="RadioService [[Пак Звезда]] radio_service.zdl Home" modified="20210902122554074" modifier="zeid" title="$:/StoryList">
+<div created="20210902110103548" creator="zeid" list="[[Криптосервис - Саша]] [[Пак Звезда]] radio_service.zdl Home" modified="20210902122554074" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13908,6 +13910,17 @@ var_dump($x);*/
 #	RadioFeedback.SendMsg
 
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
+</pre>
+</div>
+<div created="20210902150438969" creator="zeid" modified="20210902150753380" modifier="zeid" tags="Криптосервис info" title="Криптосервис - Саша">
+<pre>- SendData ты вызываешь у AppService API и передаёшь ему открытые данные для передачи. Криптосервис зашифровывает данные и посылает по RadioFeedback API транспортному прокси на отправку. Для этого вызывается метод SendMsg.
+
+- Криптосервис вызывает функцию SendMsg у транспортного прокси через RadioFeedback API и передаёт ему зашифрованное сообщение. (из документа)
+
+- Транспортный прокси - это тоже ты. Поэтому тебе нужно будет ожидать вызов этой функции по этому API от криптосервиса.Для этого тебе нужно установить коннект с криптосервисом по соответствующим портам.
+
+- То есть, я получаю от криптосервиса зашифрованное сообщение
+
 </pre>
 </div>
 <div created="20210603152704922" modified="20210603154359612" tags="" title="Облако тегов - 1">
