Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13912,16 +13912,107 @@ var_dump($x);*/
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
 </pre>
 </div>
-<div created="20210902150438969" creator="zeid" modified="20210902150753380" modifier="zeid" tags="Криптосервис info" title="Криптосервис - Саша">
+<div created="20210902150438969" creator="zeid" modified="20210902152339006" modifier="zeid" tags="Криптосервис info" title="Криптосервис - Саша">
 <pre>- SendData ты вызываешь у AppService API и передаёшь ему открытые данные для передачи. Криптосервис зашифровывает данные и посылает по RadioFeedback API транспортному прокси на отправку. Для этого вызывается метод SendMsg.
 
 - Криптосервис вызывает функцию SendMsg у транспортного прокси через RadioFeedback API и передаёт ему зашифрованное сообщение. (из документа)
 
-- Транспортный прокси - это тоже ты. Поэтому тебе нужно будет ожидать вызов этой функции по этому API от криптосервиса.Для этого тебе нужно установить коннект с криптосервисом по соответствующим портам.
+- Транспортный прокси - это тоже ты. Поэтому тебе нужно будет ожидать вызов этой функции по этому API от криптосервиса. Для этого тебе нужно установить коннект с криптосервисом по соответствующим портам.
 
-- То есть, я получаю от криптосервиса зашифрованное сообщение
+- То есть, я получаю от криптосервиса зашифрованное сообщение?
 
-</pre>
+- Да, верно. Ты его получаешь и дальше перенаправляешь по каналу клиенту. В одном апи ты вызываешь SendData, в другом слушаешь SendMsg. В терминологии TCP криптосервис всегда сервер. Поэтому тебе нужно сначала установить соединение по сокетам. Потом провести [[handshake]], а затем встать в ожидание вызова функции SendMsg.
+
+- То есть, SendData и ReceiveData напрямую не связаны?
+
+- Нет, не связаны. ReceiveData вызывается в другом сценарии, когда сообщение от клиента нужно принять. В этом случае ты по транспортному каналу получаешь сообщение, передаёшь его в RadioService API ReceiveMsg. После чего криптосервис расшифровывает сообщение и уже открытые данные передаёт через вызов функции ReceiveData у AppFeedback API.
+
+- Как мне сделать эмуляцию этих данных?
+
+- Это очень хороший вопрос.Там же в обменнике есть ещё одна директория, называется `client`. Вот тот клиент, который у тебя сейчас в БД, которую ты должна была скопировать к криптосервису в корень, он представлен в виде виртуальной карты и вирика. У нас он будет виртуальным, но когда мы всё доделаем - это будет настоящая карта у клиента в устройстве. 
+
+---
+
+!! Реализация MessagePack
+
+Кстати, если ты используешь библиотечную реализацию MessagePack, допускается, что разные реализации урезают передаваемые байты.
+Т.е. ClientID у нас указан как U32. По нашим правилам он должен передаваться в явном виде как U32, т.е. CE 00 00 00 01. Так упаковывается U32. Некоторые библиотеки, в т.ч. на C#, экономят байты и упаковывают его по другим правилам. В твоём примере выше было так, что php упаковал 00 00 00 01 просто как 01. Это допускается.
+
+---
+
+```properties
+Receiving package of API RadioService
+RawPkg: 00 01 00 01 00 01 00 00 00 1A | 91 C4 17 00 00 81 85 01 00 00 00 01 00 00 00 00 00 01 80 3D BC B8 47 FB B3 FF
+                 Type: 1 (Function Call)
+                 MsgId: 1
+                 FuncId: 1 (ReceiveMsg)
+                 CrispInfo:
+                     ClientID: 00000001
+                     ServSeqNum: 000000
+                     ClientSeqNum: 000001
+                     PS: 80 ( от клиента )
+```
+
+Разберём сериализованное сообщение.
+`91` - это индикатор массива из 1-го элемента. У нас входные данные оборачиваются в tuple, который в мессаджпаке представлен в виде массива. Итого у нас массив из 1 элемента.
+
+Дальше у нас идёт `C4` - это индикатор binary. Сырые байты, которые передаются как есть. Дальше идёт байт 17 - длина входного сообщения.
+
+Потом идут сами байты.
+
+Само сообщение: 
+
+```
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 01 80 3D BC B8 47 FB B3 FF. 
+```
+
+Это [[CRISP]]-сообщение, которое надо передать клиенту.
+
+Crisp-сообщение - это не строка, это байты. Их надо передать как есть.
+
+---
+
+1) Нужно получить сообщение от сервера.
+
+```
+91 C4 17 00 00 81 85 01 00 00 00 01 00 00 00 00 00 01 80 3D BC B8 47 FB B3 FF
+```
+
+2) Дальше распаковать и получить Crisp-сообщение:
+
+```
+00 00 81 85 01 00 00 00 01 00 00 00 00 00 01 80 3D BC B8 47 FB B3 FF.
+```
+
+2) Дальше нужно это сообщение отправить по HTTP клиенту
+
+---
+
+!! Кивок
+
+- Ты можешь просто заглушку сделать для RadioFeedback API. Его задача слушать сокет, а при приёме сообщения от криптосервиса просто кивать.
+Чтобы убедительно кивать, нужно в ответ отправлять такое сообщение:
+
+```
+00 02 00 02 00 00 00 00 00 00
+```
+
+
+Здесь нужно будет следить только за четвёртым байтом. Его надо ставить таким, который пришёл во входящем сообщении. Это MsgId.
+
+```
+00 02 &gt;&gt; 00 02 &lt;&lt; 00 00 00 00 00 00
+```
+
+Первый байт будет (скорее всего) всегда 00. А вот второй будет меняться.
+
+```properties
+Входное_сообщение:
+00 01 &gt;&gt; 00 02 &lt;&lt; 00 01 00 00 00 1F | 92 CE 00 00 00 01 C4 17 00 00 82 85 01 00 00 00 01 00 00 02 00 00 00 00 31 32 33 97 65 13 29
+
+Кивок:
+00 02 &gt;&gt; 00 02 &lt;&lt; 00 00 00 00 00 00
+```</pre>
 </div>
 <div created="20210603152704922" modified="20210603154359612" tags="" title="Облако тегов - 1">
 <pre>&lt;style&gt;
