--- a/cafe.html
+++ b/cafe.html
@@ -14110,8 +14110,10 @@ https://stackoverflow.com/questions/19933550/how-to-connect-with-host-postgresql
 <div created="20210831142111474" modified="20210831142230319" tags="meri reg" title="Почта">
 <pre>https://mail.niime.ru/owa/</pre>
 </div>
-<div created="20210902110111815" creator="zeid" modified="20210902152508353" modifier="zeid" tags="Криптосервис info CRISP" title="Примеры вызовов функций криптосервиса">
-<pre>Теоретическая база
+<div created="20210902110111815" creator="zeid" modified="20210902152558498" modifier="zeid" tags="Криптосервис info CRISP" title="Примеры вызовов функций криптосервиса">
+<pre>&lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
+
+Теоретическая база
 Состав ПАК «Звезда»:
 
 # микросхема, интегрируемая в конечное устройство (далее по тексту - [[ЭБ]]).
