--- a/cafe.html
+++ b/cafe.html
@@ -12149,8 +12149,8 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210902121919378" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>projects</pre>
+<div created="20210826160606675" creator="zeid" modified="20210905102235508" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>linux</pre>
 </div>
 <div created="20210826160602899" creator="zeid" modified="20210902121608665" modifier="zeid" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210902110103548" creator="zeid" list="[[Примеры вызовов функций криптосервиса]] [[Криптосервис - Саша]] [[Пак Звезда]] radio_service.zdl Home" modified="20210902152459952" modifier="zeid" title="$:/StoryList">
+<div created="20210905102236854" creator="zeid" list="virtualbox [[Turnkey Lamp]] Home" modified="20210905102239887" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13254,8 +13254,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 </pre>
 </div>
 <div created="20210901120834981" creator="zeid" modified="20210902122048178" modifier="zeid" tags="zdl Криптосервис" title="radio_service.zdl">
-<pre>
-```properties
+<pre>```properties
 # API которое предоставляет криптосервис для получения сообщений от клиентов.
 # Пользователем данного API является подсистема, обеспечивающая коммуникацию с клиентами, зарегистрированными в криптосервисе.
 # Для функционирования криптосервиса в составе криптосервера необходимо открыть соединение для обслуживания данного API.
@@ -13346,7 +13345,7 @@ enum class Functions {
 * {{Отображать тип проекта (LHD-RV) при генерации||checklist}}
 * {{В окне дампа памяти у Андрея появляется ошибка||checklist}}</pre>
 </div>
-<div created="20210826155246470" modified="20210831123627570" tags="virtualbox reg" title="Turnkey Lamp">
+<div created="20210826155246470" creator="zeid" modified="20210905102256951" modifier="zeid" tags="virtualbox reg" title="Turnkey Lamp">
 <pre>Turnkey:
 Mysql, root: `Darjee74ling`
 
@@ -13356,6 +13355,14 @@ Xubuntu:
 login: zeid
 pass: 141410
 ```
+
+Пакеты:
+
+```
+sudo apt install php-mbstring
+
+```
+
 </pre>
 </div>
 <div created="20210603091750286" modified="20210603091801951" tags="eclipse" title="views">
