--- a/cafe.html
+++ b/cafe.html
@@ -12353,7 +12353,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210905102236854" creator="zeid" list="virtualbox [[Turnkey Lamp]] Home" modified="20210905102239887" modifier="zeid" title="$:/StoryList">
+<div created="20210907094114247" creator="zeid" list="Home [[Криптосервис - задачи]]" modified="20210907094114247" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13908,7 +13908,7 @@ var_dump($x);*/
 ```
 </pre>
 </div>
-<div created="20210831115833307" creator="zeid" modified="20210902122519759" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<div created="20210831115833307" creator="zeid" modified="20210907094651825" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
 <pre>Основные функции:
 
 #	AppService.SendData
@@ -13917,6 +13917,50 @@ var_dump($x);*/
 #	RadioFeedback.SendMsg
 
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
+
+
+---
+
+Пользователи сервиса &quot;Облачная звезда&quot; осуществляют доступ к криптосервису через Proxy на основе HTTP-сервера. Необходимо реализовать этот Proxy на PHP.
+Proxy должен обеспечивать следующий функционал:
+
+`(I) Административные функции:`&lt;br /&gt;
+`1)` Регистрация пользователя - заполнение анкеты и формирование e-mail в адрес администратора.
+Анкета:
+
+* Организация + контактные данные
+* Ответственно лицо (ФИО, должность, контактные данные)
+* Сколько требуется образцов
+* Дополнительные пожелания
+
+`2)` Авторизация пользователя&lt;br /&gt;
+`3)` Личный кабинет - предоставление информации о зарегистрированных устройствах&lt;br /&gt;
+
+`(II) Рабочие функции:`&lt;br /&gt;
+`1)` Прием/передача сообщений в формате JSon по 4-м интерфейсам
+
+* app_feedback
+* app_service
+* radio_feedback
+* radio_service
+
+Причем app_feedback и radio_feedback реализуются по технологии поллинга.
+
+`2)` Прием передача сообщений в текстовом виде через форму на HTML-странице.
+Открытые сообщения могут быть представлены в виде ASCII или HEX по выбору пользователя, зашифрованные сообщения только в формате HEX.
+Страница разбивается на 4 квадрата:
+
+* верхние 2 квадрата - расшифрование сообщений от устройства (uplink: radio_service / app_feedback)
+* нижние 2 квадрата - шифрование сообщений в адрес устройства (downlink: app_service / radio_feedback)
+
+Желательно для каждого интерфейса (квадрата) предусмотреть лог переданных сообщений.
+
+`Замечания по реализации:`
+
+*принимаемые от криптосервиса сообщения должны буферизироваться и отдаваться пользователю по запросу.
+* необходимо вести учет зарегистрированных устройств у каждого клиента и не допускать обращения от имени чужих устройств.
+* надо иметь в виду, что поддерживаемые сообщения асинхронные, причем число сообщений от криптосервиса может отличаться от числа сообщений в адрес криптосервиса.
+- необходимо разрывать сессию при отсутствии сообщений в течение заданного времени (например, 8 часов)
 </pre>
 </div>
 <div created="20210902150438969" creator="zeid" modified="20210902152409337" modifier="zeid" tags="Криптосервис info" title="Криптосервис - Саша">
