Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12362,7 +12362,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div list="[[Zvezda - gitee]] Home" title="$:/StoryList">
+<div created="20211004091810686" creator="zeid" list="[[Zvezda - gitee]] Home" modified="20211004091810686" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -14552,7 +14552,7 @@ jcr2297215</pre>
     color: #d79921;
 		}</pre>
 </div>
-<div created="20211004091508528" creator="zeid" modified="20211004091804382" modifier="zeid" tags="gitee zvezda Криптосервис git" title="Zvezda - gitee">
+<div created="20211004091508528" creator="zeid" modified="20211004091932198" modifier="zeid" tags="gitee zvezda Криптосервис git" title="Zvezda - gitee">
 <pre>
 ```properties
 git config --global user.name &quot;xekima&quot;
@@ -14581,6 +14581,10 @@ cd existing_git_repo
 git remote add origin https://gitee.com/xekima/zvezda.git
 git push -u origin master
 ```
+
+---
+
+xekima@yandex.ru xantheose74
 </pre>
 </div>
 
