--- a/cafe.html
+++ b/cafe.html
@@ -12155,7 +12155,7 @@ Error message and password prompt
 <div created="20210602141535668" creator="zeid" modified="20210831181004809" modifier="zeid" title="$:/state/tab2--1311305590">
 <pre>php</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20211004091728285" modifier="zeid" title="$:/state/tab2--2017306950">
+<div created="20210826160606675" creator="zeid" modified="20211004091941477" modifier="zeid" title="$:/state/tab2--2017306950">
 <pre>projects</pre>
 </div>
 <div created="20210826160602899" creator="zeid" modified="20210902121608665" modifier="zeid" title="$:/state/tab2--2135597508">
@@ -14552,7 +14552,7 @@ jcr2297215</pre>
     color: #d79921;
 		}</pre>
 </div>
-<div created="20211004091508528" creator="zeid" modified="20211004091932198" modifier="zeid" tags="gitee zvezda Криптосервис git" title="Zvezda - gitee">
+<div created="20211004091508528" creator="zeid" modified="20211004092040526" modifier="zeid" tags="gitee zvezda Криптосервис git" title="Zvezda - gitee">
 <pre>
 ```properties
 git config --global user.name &quot;xekima&quot;
@@ -14584,7 +14584,7 @@ git push -u origin master
 
 ---
 
-xekima@yandex.ru xantheose74
+username: xekima@yandex.ru 
 </pre>
 </div>
 
